Addressed Raphael's comments for BE_vol1 and index.rst. Thanks @positr0nium!

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -31,7 +31,11 @@
     "| [.apply_rus(prep_func)](../../../reference/Block%20Encodings/methods/apply_rus.rst) | Applies a matrix to a quantum state | Fault-tolerant / Repeat-Until-Success logic. |\n",
     "| ``+``, ``-``, ``*``, ``@``, ``.kron()`` | Algebraic arithmetic on encodings | Constructing complex composite systems. |\n",
     "\n",
-    "Once all these concepts become second nature, we'll build on them in the next tutorial, applying them for performing arbitrary polynomial transformations, solving linear systems, and Hamiltonian simulation. All by using methods of the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class. Clean. Intuitive. Qrisp."
+    "Once all these concepts become second nature, we'll build on them in the next tutorial, applying them for performing arbitrary polynomial transformations, solving linear systems, and Hamiltonian simulation. All by using methods of the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class. Clean. Intuitive. Qrisp.\n",
+    "\n",
+    ":::{note}\n",
+    "It is important to note that while the evolution within the block encoding is unitary, the ultimate retrieval of the result typically involves a measurement on the ancilla qubits to \"project\" the system into the desired subspace. In the standard [Copenhagen interpretation](https://en.wikipedia.org/wiki/Copenhagen_interpretation), this measurement is a non-unitary, non-reversible collapse that triggers the measurement problem—the philosophical and physical gap between smooth unitary evolution and the random nature of observation. While some (including myself) find the [Everettian (Many-Worlds) view](https://en.wikipedia.org/wiki/Many-worlds_interpretation) compelling; where the measurement is just a further unitary entanglement of the observer with the system, it remains a non-standard stance (for now...). Regardless of your preferred interpretation, the practical reality of current hardware requires us to treat measurement as a distinct, non-unitary step that defines the success of our block encoding.\n",
+    ":::"
    ]
   },
   {
@@ -42,11 +46,20 @@
     "## What are block-encodings?\n",
     "Block encoding is a foundational technique that allows a quantum computer to represent a general matrix $A$ (where $\\|A\\|\\leq1$) as the top-left block of a larger unitary matrix $U$.\n",
     "\n",
-    "We say that a unitary $U$ is an $(\\alpha,m,\\epsilon)$-block-encoding of $A$, where $\\alpha$ is the scaling factor, $m$ is the number of ancillary qubits, and $\\epsilon$ is the precision. We essentially put a (possibly) non-unitary matrix in the top left block of a larger, unitary matrix. By projecting onto that top left subspace, we then essentially act exactly with the part of the matrix we wanted to apply, with the rest of the elements being disregarded.\n",
-    "$$U_A=\\begin{pmatrix}\n",
-    "\\frac{A}{\\alpha} & *\\\\\n",
-    "* & *\n",
-    "\\end{pmatrix}$$\n",
+    "Following the standard definition (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)), we say that a unitary $U$ is an $(\\alpha, m, \\epsilon)$-block-encoding of $A$ if\n",
+    "$$\\| A - \\alpha (\\bra{G} \\otimes I) U (\\ket{G} \\otimes I) \\| \\leq \\epsilon,$$\n",
+    "Where:\n",
+    "- $\\alpha$ (Scaling Factor): Since $\\|U\\|=1$, we must scale $A$ such that $\\|A/\\alpha\\| \\leq 1$. Usually, $\\alpha$ is related to the 1-norm of the coefficients in an LCU decomposition.\n",
+    "\n",
+    "- $m$ (Ancilla Qubits): The number of additional qubits required to define the larger Hilbert space in which $U$ acts.\n",
+    "\n",
+    "- $\\epsilon$ (Precision): The error tolerance. In practice, our quantum circuit $U$ only approximates $A$ to a certain degree of accuracy.\n",
+    "\n",
+    "- $\\ket{G}$ (Signal State): Often called the \"ancilla state,\" this is a specific basis state (typically $\\ket{0}^{\\otimes m}$) that defines the subspace where $A$ is embedded.\n",
+    "\n",
+    "Visually, we essentially put a scaled, non-unitary matrix in the top-left block of a larger unitary matrix:\n",
+    "$$U = \\begin{pmatrix}\\frac{A}{\\alpha} & * \\\\ * & * \\end{pmatrix}$$\n",
+    "By preparing the ancillas in state $\\ket{G}$ and then projecting back onto $\\bra{G}$ after applying $U$, we \"isolate\" the action of $A$ on our target system.\n",
     "\n",
     "In Qrisp, we can construct a block encoding in three ways:\n",
     "\n",
@@ -95,6 +108,10 @@
    "id": "e320374f",
    "metadata": {},
    "source": [
+    "Think of a Pauli string as a multi-qubit instruction. It is a sequence of Pauli [operators](../../../reference/Operators/QubitOperator.rst)  (matrices) $\\mathbb{I}$, $X\\leftrightarrow \\sigma_X$, $Y\\leftrightarrow\\sigma_Y$, and $Z\\leftrightarrow\\sigma_Z$. Each individual Pauli matrix is a simple $2 \\times 2$ unitary matrix. When you have multiple qubits, you take the tensor product of these matrices. For example, a Pauli string for a 3-qubit system might look like $X \\otimes Z \\otimes I$ (often shortened to $XZI$). Since Pauli strings are unitary and Hermitian, they’re a natural fit for quantum hardware. If you can break an operator down into Pauli strings, a quantum computer knows exactly how to execute it.\n",
+    "\n",
+    "And this is exactly what these methods do. The former takes an arbitrary square matrix and expresses it as a weighted sum of these Pauli strings ($A=\\sum_j\\alpha_j P_j$), where $\\alpha_j$ is a scalar coefficient (aka a number) and $P_j$ is a Pauli string, while in the latter, we already provide the Hamiltonian in terms of these Pauli strings.\n",
+    "\n",
     "Essentially, the third approach, [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst), is the epitome of block encoding. I mean, what it does is actually in the acronym: Linear Combination of Unitaries (or for the academic practitioners among you: $A=\\sum_i\\alpha_i U_i$).\n",
     "\n",
     "If such a matrix $A$ is expressed as shown above (as a weighted sum of unitaries), the LCU algorithmic primitive uses three (well, technically two) oracles:\n",
@@ -318,10 +335,6 @@
     "\n",
     "Why is that? Well, it all comes down to which unitaries and how many do we want to combine to construct the block encoding. In the custom block encoding it's rather self apparent: we need three unitaries to construct the Laplacian, as seen above. The [.from_array](../../../reference/Block%20Encodings/methods/from_array.rst) and [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) methods, on the other hand, construct block encodings by decomposing the Hamiltonian into a linear combination of Pauli strings. If you're asking what is a Pauli string, here's a quick intuitive answer.\n",
     "\n",
-    "Think of a Pauli string as a multi-qubit instruction. It is a sequence of Pauli [operators](../../../reference/Operators/QubitOperator.rst)  (matrices) $\\mathbb{I}$, $X\\leftrightarrow \\sigma_X$, $Y\\leftrightarrow\\sigma_Y$, and $Z\\leftrightarrow\\sigma_Z$. Each individual Pauli matrix is a simple $2 \\times 2$ unitary matrix. When you have multiple qubits, you take the tensor product of these matrices. For example, a Pauli string for a 3-qubit system might look like $X \\otimes Z \\otimes I$ (often shortened to $XZI$). Since Pauli strings are unitary and Hermitian, they’re a natural fit for quantum hardware. If you can break an operator down into Pauli strings, a quantum computer knows exactly how to execute it.\n",
-    "\n",
-    "And this is exactly what the methods do. It takes an arbitrary square matrix and expresses it as a weighted sum of these Pauli strings ($A=\\sum_j\\alpha_j P_j$), where $\\alpha_j$ is a scalar coefficient (aka a number) and $P_j$ is a Pauli string.\n",
-    "\n",
     ":::{note}\n",
     "Pauli $n$-strings form a basis for the operator space on n-qubits. So you can always write a $n$-qubit linear operator in terms of Paulis.\n",
     ":::\n",
@@ -330,7 +343,7 @@
     "\n",
     "In the case of our 1D Laplacian, Pauli Decomposition might require up to $4^4=256$ (to be precise: $3\\cdot2^n$ for an $n$-qubit discrete Laplacian) different Pauli strings to represent the matrix. LCU, on the other hand, requires only 3 custom unitaries (like the ones we manually defined) to represent the exact same matrix.\n",
     "\n",
-    "Building a block encoding requires a number of auxiliary qubits and gate operations proportional to the number of terms in your sum. The more terms, the more complex the circuit, leading to more noise, requiring more qubits. \n",
+    "Building a block encoding requires a number of auxiliary qubits and gate operations proportional to the number of terms in your sum. The more terms, the more complex the circuit, leading to more credits it costs to execute on hardware, while also sometimes requiring more qubits. \n",
     "\n",
     "Having explored various approaches to constructing block encodings and analyzing their quantum resource requirements, this already sounds particularly valuable for researchers developing new methods to block-encode specific matrices. Once your custom block encoding is implemented in Qrisp, performing resource estimation becomes straightforward: simply call[.resources](../../../reference/Block%20Encodings/methods/resources.rst). If you’d like assistance integrating your approach, please get in touch so we can include it in future releases. Our goal is to gather a wide range of block encoding techniques in one place, allowing users to easily select the most resource-efficient method for their particular problem.\n",
     "\n",
@@ -445,7 +458,7 @@
     "\n",
     "### The automatic, FT way: [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst)\n",
     "\n",
-    "If you don't feel like manually filtering your data or wasting quantum shots, you use [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst). The [RUS](../../../reference/Jasp/Control%20Flow/RUS.rst) stands for Repeat-Until-Success.\n",
+    "If you don't feel like manually filtering your data, you can instead use [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst). The [RUS](../../../reference/Jasp/Control%20Flow/RUS.rst) stands for Repeat-Until-Success. This approach automatically handles the filtering at run time. While the same number of quantum shots are taken, unsuccessful ones are discarded dynamically.\n",
     "\n",
     "Instead of you manually checking the ancillas, the [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst) method wraps the entire process into a loop:\n",
     "\n",
@@ -506,7 +519,7 @@
    "source": [
     "A few things to note here. We pass the operand (the state we have prepared and want to apply the operator to) as a function, as oppossed as a [QuantumVariable](../../../reference/Core/QuantumVariable.rst). The second difference is the way we obtain the BlockEncoding and apply the [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst), which is within a main function. This is because we use the [Jasp](../../../reference/Jasp/index.rst) compilation pipeline, which allows us to avoid the pythonic compilation bottleneck. You can learn more bout it in the Jasp tutorial.\n",
     "\n",
-    "By invoking the [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator, we sample this probability plenty of times. \n",
+    "Next, we invoke the [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator. Simply put, this decorator tells the compiler to efficiently simulate and sample the final measurement distribution of our quantum program. Instead of manually writing a classical loop to execute the circuit and gather measurement statistics, [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) automatically handles the heavy lifting of sampling this probability multiple times.\n",
     "\n",
     "In the end, we obtain a result that is consistent when repeating the simulation. This is also observed in the variance. We essentially obtain the correct solution all the time with the variance not depending on the amount of shots. How neat is that?!\n",
     "\n",
