Further improvements and additions based on the suggestions. WIP: the direct construction of the BlockEncoding class assigned to @renezander

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -46,6 +46,10 @@
     "## What are block-encodings?\n",
     "Block encoding is a foundational technique that allows a quantum computer to represent a general matrix $A$ (where $\\|A\\|\\leq1$) as the top-left block of a larger unitary matrix $U$.\n",
     "\n",
+    ":::{note}\n",
+    "Because a unitary matrix $U$ always has a spectral norm of $\\|U\\| = 1$, any sub-block within it must also have a norm $\\leq 1$. Therefore, to encode a general matrix $A$, we must scale it by a factor $\\alpha$ such that $\\|A/\\alpha\\| \\leq 1$.\n",
+    ":::\n",
+    "\n",
     "Following the standard definition (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)), we say that a unitary $U$ is an $(\\alpha, m, \\epsilon)$-block-encoding of $A$ if\n",
     "$$\\| A - \\alpha (\\bra{G} \\otimes I) U (\\ket{G} \\otimes I) \\| \\leq \\epsilon,$$\n",
     "Where:\n",
@@ -61,15 +65,21 @@
     "$$U = \\begin{pmatrix}\\frac{A}{\\alpha} & * \\\\ * & * \\end{pmatrix}$$\n",
     "By preparing the ancillas in state $\\ket{G}$ and then projecting back onto $\\bra{G}$ after applying $U$, we \"isolate\" the action of $A$ on our target system.\n",
     "\n",
-    "In Qrisp, we can construct a block encoding in three ways:\n",
+    "In Qrisp, we can construct a block encoding in four ways:\n",
     "\n",
     "- [.from_array](../../../reference/Block%20Encodings/methods/from_array.rst) constructs a BlockEncoding from a numpy array,\n",
     "\n",
     "- [.from_operator](../../../reference/Block%20Encodings/methods/from_operator.rst) constructs a Blockencoding directly from a Hamiltonian constructed via QubitOperators, or FermionicOperators,\n",
     "\n",
-    "- and lastly, the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst)` constructs a BlockEncoding using the Linear Combination of Unitaries approach.\n",
+    "- [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst)` constructs a BlockEncoding using the Linear Combination of Unitaries approach,\n",
     "\n",
-    "The first two options are rather self-explanatory, really... You (the user) provide the matrix and/or Hamiltonian you'd like to block encode, invoke the appropriate method for your desired input and, whoosh, Qrisp block encodes it for ya."
+    "- Direct construction via the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class constructor allows you to manually define a new encoding by specifying a ``new_alpha``, ``new_anc_templates``, and a ``new_unitary`` function and returning ``BlockEncoding(new_alpha, new_anc_templates, new_unitary, num_ops=self.num_ops)``.\n",
+    "\n",
+    "The first three options are rather self-explanatory, really... You (the user) provide the matrix and/or Hamiltonian you'd like to block encode, or, alternatively, the list of unitaries with the corresponding list of coefficients, invoke the appropriate method for your desired input and, whoosh, Qrisp block encodes it for ya.\n",
+    "\n",
+    "the Direct construction method is the route for academic with state-of-the-art custom block encodings up their sleeves, catered to the researchers that would like to implement their custom block encodings (and hopefully add them as methods for this class).\n",
+    "\n",
+    "Without getting ahead of ourselves, let's first showcase the ready-to-go methods:"
    ]
   },
   {
@@ -144,6 +154,43 @@
     "\n",
     "How are we feeling? I assume that the researchers in the field could be portrayed with this emoji (😎), while people coming from outside of quantum can feel a bit overwhelmed (🥲). Let's balance the target audiences by a relevant example that is the cornerstone of solving partial differential equations, where we also explain how to use the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) method (went quite the tangent, huh? Glad you're still here - it'll be worth it!).\n",
     "\n",
+    "Before showing an example, let us first quickly (and without the loss of generality, hopefully) showcase how all of this is done within the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class. Feel free to also skip to the next section, showing the example of block-encoding the discrete Laplacian, for now and come back to this part after going through the Qubitization part of the BlockEncoding 201 tutorial.\n",
+    "\n",
+    "You have been warned, let's get technical!\n",
+    "\n",
+    "To manually define a BlockEncoding, you need to provide the three core components that define the LCU primitive:\n",
+    "\n",
+    "- $\\alpha$ (alpha): The normalization constant. Since a unitary has a spectral norm of 1, and your matrix $A$ likely doesn't, we encode $A/\\alpha$.\n",
+    "\n",
+    "- Ancilla Templates: A list of QuantumVariable types (templates) that define the \"address space\" for your SELECT operation.\n",
+    "\n",
+    "- The Unitary Function: A function that takes the ancilla(s) and the operand, and applies the controlled unitaries.\n",
+    "\n",
+    "Here is how ``.qubitization()`` is defined within the class (don't worry, the topic of Qubitization is heavily covered in the next tutorial), which allows for simply performing a walk operator on our BlockEncoding, and (again, as we will see in the second tutorial) plays a direct role in how to block-encode nice polynomials under the name Chebyshev polynomials. The path of learning is long and rewarding.\n",
+    "\n",
+    "This should give you an idea about how to go around implementing your own custom block encodings with the class. If you're interested, we would love to add your approaches as methods of our class in Qrisp - you can contribute your methods to the Qrisp GitHub repository (no pressure, of course, but highly encouraged, since... you know... open-source software development and all that jazz)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd950291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### EXAMPLE RENÈ\n",
+    "##### EXAMPLE RENÈ\n",
+    "##### EXAMPLE RENÈ\n",
+    "##### EXAMPLE RENÈ\n",
+    "##### EXAMPLE RENÈ\n",
+    "##### EXAMPLE RENÈ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4589150b",
+   "metadata": {},
+   "source": [
     "## Custom BlockEncoding: the discrete Laplacian example\n",
     "\n",
     "In this example, we construct a block encoding of the 1D discrete Laplacian operator with periodic boundary conditions using the [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) method. The discrete Laplace operator is central in numerical physics and differential equations, since it represents the second derivative on a grid. \n",
@@ -704,7 +751,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qrisp_new_11",
+   "display_name": "Qrisp_BE",
    "language": "python",
    "name": "python3"
   },
