--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -91,13 +91,21 @@
     "One of the most powerful features of Qubitization is its natural relationship with Chebyshev polynomials of the first kind, $T_k(x)$, defined as $T_k(\\cos \\theta) = \\cos(k\\theta)$. If we apply the walk operator $W$ $k$-times, the resulting unitary $W^k$ contains $T_k(A/\\alpha)$ block encoded in the top-left block:\n",
     "$$(\\bra{G} \\otimes \\mathbb{1}) W^k (\\ket{G} \\otimes \\mathbb{1}) = T_k(A/\\alpha).$$\n",
     "\n",
+    "This is kind of resembling by how we defined our typical block encoding business. To freshen the memory, this is how we have defined block encoding in the previous tutorial:\n",
+    "$$(\\bra{G} \\otimes \\mathbb{1}) U (\\ket{G} \\otimes \\mathbb{1}) = A/\\alpha.$$\n",
+    "We just replaced $U$ with $W^k$. I'm still in awe about how this holds true - it cannot be this simple, right?! Well, based on the theory backing it, it is. Awesome!\n",
+    "\n",
+    "You might notice the term $A/\\alpha$ and wonder where this scaling comes from. In any block encoding, we are embedding a non-unitary matrix $A$ into a larger unitary $U$. Since the eigenvalues of a unitary must lie on the unit circle (norm 1), and the spectral norm of our matrix $A$ might be much larger, we must scale $A$ down.\n",
+    "\n",
+    "In the LCU framework, if $A = \\sum_i \\alpha_i U_i$, then $\\alpha = \\sum_i |\\alpha_i|$. This $\\alpha$ (often called the \"subnormalization factor\") ensures that the operator $\\|A/\\alpha\\| \\leq 1$, making it mathematically possible to \"fit\" inside a quantum circuit.\n",
+    "\n",
     "\"But what's so special about Chebyshev polynomials?\", you might be wondering. As noted in Lin Lin’s lecture notes, Chebyshev polynomials are \"optimal\" in two senses:\n",
     "\n",
     "- Iterative Efficiency: Because $W$ is a single unitary, applying $W^k$ requires only $k$ queries to the block encoding. This is much cheaper than the $O(2^n)$ terms often required by naive Taylor series expansions.\n",
     "\n",
-    "- Approximation Theory: According to the Chebyshev Equioscillation Theorem, $T_k(x)$ provides the best uniform approximation to a function over the interval $[-1, 1]$. This ensures that our quantum algorithm achieves the desired precision $\\epsilon$ with the minimum possible quantum resources.\n",
+    "- Approximation Theory: According to the [Chebyshev Equioscillation Theorem](https://en.wikipedia.org/wiki/Equioscillation_theorem), $T_k(x)$ provides the best uniform approximation to a function over the interval $[-1, 1]$. This ensures that our quantum algorithm achieves the desired precision $\\epsilon$ with the minimum possible quantum resources.\n",
     "\n",
-    "we think that, again, some visual aid is needed. By applying the [.qubitization()](../../../reference/Block%20Encodings/methods/qubitization.rst) operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
+    "we think that, again, some visual aid is needed. By applying the walk operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k(H)$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
     "\n",
     "![Alt text](cheb_poly.png)\n",
     "\n",
@@ -236,15 +244,19 @@
     "\n",
     "## Quantum Lanczos method\n",
     "\n",
-    "The ability to efficiently block-encode Chebyshev polynomials isn't just a mathematical flex; it’s a prerequisite for one of the most exciting algorithms in recent years: the Quantum Lanczos Method.\n",
+    "The ability to efficiently block-encode Chebyshev polynomials isn't just a mathematical flex; it’s a prerequisite for one of the most exciting algorithms in recent years: the Quantum Lanczos Method, an algorithms that redefines how we study quantum systems.\n",
     "\n",
-    "As detailed in the paper [Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567), these polynomials are used to construct what is known as a Krylov subspace. By applying different orders of $T_k$ to an initial state, we can \"scan\" the spectrum of a Hamiltonian without performing expensive real or imaginary time evolution.\n",
+    "Typically, if we want to find the ground state energy or spectral properties of a Hamiltonian, we might reach for Quantum Phase Estimation (QPE). However, QPE requires long-time Hamiltonian simulation (real-time evolution), which can be extremely expensive in terms of circuit depth.\n",
+    "\n",
+    "As detailed in the paper [Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567), we can use Chebyshev polynomials to achieve similar goals more efficiently. Instead of evolving the system in time, we use these polynomials to construct a Krylov subspace. This allows us to \"scan\" the spectrum of a Hamiltonian by building the subspace through simple repetitions of the walk operator, rather than complex time-evolution gates.\n",
     "\n",
     "To put it in a more digestible way, the Lanczos method projects the Hamiltonian into a much smaller, manageable subspace. We construct a projected Hamiltonian matrix $\\mathbf{H}$ and an overlap matrix $\\mathbf{S}$ within this subspace. The matrix elements are defined as:\n",
     "$$S_{ij} = \\bra{\\psi_0} T_i(H) T_j(H) \\ket{\\psi_0} = \\braket{T_i(H)T_j(H)}_0$$\n",
     "$$H_{ij} = \\bra{\\psi_0} T_i(H) H T_j(H) \\ket{\\psi_0} = \\braket{T_i(H)HT_j(H)}_0$$\n",
     "\n",
-    "Using the product identities of Chebyshev polynomials, these can be broken down into linear combinations of simple expectation values $\\braket{T_k(H)}_0$.\n",
+    "Using the product identities of Chebyshev polynomials, these can be broken down into linear combinations of simple expectation values $\\braket{T_k(H)}_0$. For detail on how these expectation values are measured, see the [Qrisp Lanczos algorithm documentation](../../../reference/Algorithms/Lanczos.rst).\n",
+    "\n",
+    "By diagonalizing these small matrices classically, we can find the ground state energy with far less quantum \"effort\" than traditional dynamics-based methods.\n",
     "\n",
     "If you're wondering why you should care, this allows for highly accurate Ground State Preparation! By solving the generalized eigenvalue problem $\\mathbf{H}\\vec{v}=\\epsilon \\mathbf{S}\\vec{v}$ classically, we can find the lowest eigenvalue (the ground state energy) and the corresponding state with far fewer resources than traditional Phase Estimation.\n",
     "\n",
@@ -318,7 +330,15 @@
     "\n",
     "Before we jump into arbitrary polynomials, there is one specific application of Chebyshev polynomials combined with Linear Combination of Unitaries (LCU) that deserves its own spotlight: The Childs-Kothari-Somma (CKS) algorithm.\n",
     "\n",
-    "The CKS algorithm solves the Quantum Linear System Problem (QLSP) $A\\vec{x} = \\vec{b}$. It does this by approximating the function $1/x$ over the domain $D_{\\kappa} = [-1, -1/\\kappa] \\cup [1/\\kappa, 1]$ using a linear combination of Chebyshev polynomials. Visually, this is represented by the domains highlighted in light blue in the following figure:\n",
+    "The CKS algorithm solves the Quantum Linear System Problem (QLSP) $A\\vec{x} = \\vec{b}$. \"Why even approximate $1/x$ to find $A^{-1}$?!\".\n",
+    "\n",
+    "To apply the inverse matrix $A^{-1}$, we simply need to invert these eigenvalues:\n",
+    "$$A^{-1} = \\sum_j \\lambda_j^{-1} \\ket{u_j}\\bra{u_j}$$\n",
+    "Therefore, the challenge of finding a quantum operator that applies a matrix inverse boils down to applying the scalar function $f(x) = 1/x$ to the eigenvalues of $A$.\n",
+    "\n",
+    "Because quantum circuits can efficiently implement polynomial transformations, the CKS algorithm achieves this by approximating the function $f(x) = 1/x$ using a linear combination of Chebyshev polynomials. Assuming the matrix $A$ is scaled so that its eigenvalues fall within the domain $D_{\\kappa} = [-1, -1/\\kappa] \\cup [1/\\kappa, 1]$ (where $\\kappa$ is the condition number), the approximation is targeted precisely over this region. \n",
+    "\n",
+    "Visually, this is represented by the domains highlighted in light blue in the following figure:\n",
     "\n",
     "![Alt text](inverse.png)\n",
     "\n",
@@ -330,12 +350,24 @@
     "\n",
     "![Alt text](BE_CKS.png)\n",
     "\n",
-    "The unary encoding trick is a neat one, that's for sure. It constructs a unary state (instead of the usual $\\text{PREP}$ in binary encoding that we use in usual LCU), which allows only for one control instead of our qrispy [q_switch](../../../reference/Primitives/qswitch.rst) one.\n",
+    "The [unary encoding](https://en.wikipedia.org/wiki/Unary_coding) trick is a neat one, that's for sure. It constructs a unary state (instead of the usual $\\text{PREP}$ in binary encoding that we use in usual LCU). By restructuring the superposition into a unary format, it bypasses the need for complex multi-controlled operations, such as our qrispy [q_switch](../../../reference/Primitives/qswitch.rst), and instead relies entirely on single-qubit controls.\n",
     "\n",
-    "Here is the state in maths:\n",
+    "Mathematically, the prepared state takes the following form:\n",
     "$$\\ket{\\text{unary}} \\propto \\sqrt{\\alpha_1}\\ket{100\\dots00} + (-1) \\sqrt{\\alpha_3}\\ket{110\\dots00} + (-1)^2 \\sqrt{\\alpha_5}\\ket{111\\dots00} +\\cdots + (-1)^{j_0-1}\\sqrt{\\alpha_{2j_0-1}}\\ket{111\\dots10} +(-1)^{j_0}\\sqrt{\\alpha_{2j_0+1}}\\ket{111\\dots11}.$$\n",
     "\n",
-    "We handle the negative signs of the coefficients $\\alpha_k$ by applying $Z$ gates to the outer ancillary variable. When such superposition is prepared, the first state, $\\ket{100\\dots00}$, corresponding to $\\alpha_1$, \"activates\" only the first unitary, i.e. $T_1(A)$ (top left in figure below). The second unary part of the unary superposition, \"\\ket{110\\dots00}\", corresponding to $\\alpha_3$ activates the $T_3(A)$ (top right in figure below). Same thing for $\\ket{111\\dots00}$ (bottom left in figure below), and so on until $k=2j_0+1$ (bottom right in figure below), where $j_0$ is the truncation order from the initial CKS paper,where all of the $(RU)^k$ \"light up\". Here is the \"figure below\" promised above:\n",
+    "The key to this decomposition is its cumulative \"thermometer\" structure. Each sequential state, $\\ket{1^m 0^{N-m}}$, adds exactly one contiguous $\\ket{1}$ from left to right. Because these $\\ket{1}$s are cumulative, the system does not need to decode a binary string to know which unitary to apply. Instead, the state of the $m$-th ancillary qubit alone acts as a single control trigger for its corresponding unitary segment.\n",
+    "\n",
+    "We handle the alternating negative signs of the coefficients $\\alpha_k$ simply by applying $Z$ gates to the respective outer ancillary qubits. Once this superposition is prepared, the unitaries are activated sequentially based on the presence of $\\ket{1}$:\n",
+    "\n",
+    "- $k=1$: The state $\\ket{100\\dots00}$ (corresponding to $\\alpha_1$) activates only the first unitary, $T_1(A)$ (top left in figure below).\n",
+    "\n",
+    "- $k=3$: The state $\\ket{110\\dots00}$ (corresponding to $\\alpha_3$) leaves the first qubit activated and adds the second, activating $T_3(A)$ (top right in figure below).\n",
+    "\n",
+    "- $k=5$: The state $\\ket{111\\dots00}$ continues the sequence (bottom left in figure below).\n",
+    "\n",
+    "- $k=2j_0+1$: This cascades down to the final state $\\ket{111\\dots11}$, where $j_0$ is the truncation order from the original CKS paper. In this state, all $(RU)^k$ segments are sequentially applied (bottom right in figure below). \n",
+    "\n",
+    "Here is the \"figure below\" promised above:\n",
     "\n",
     "![Alt text](unary_magic.png)\n",
     "\n",
@@ -443,6 +475,10 @@
     "\n",
     "At its core, QSP manipulates a single-qubit \"signal\" using a sequence of rotations. If we have $2\\times 2$ signal operator $W(x)$ that encodes some value $x \\in [-1, 1]$, we interleave it with a series of phase shifts $e^{i\\phi_j Z}$, the resulting product of unitaries can be written as:\n",
     "$$U_\\Phi(x) = e^{i\\phi_0 Z} \\prod_{j=1}^d W(x) e^{i\\phi_j Z}.$$\n",
+    "\n",
+    "To address a common point of confusion: a block encoding is formally defined as a tuple $(\\alpha, m, \\epsilon)$ associated with a unitary $U$. QSP provides a recipe to take an initial block encoding of an operator $A$ and transform it.\n",
+    "\n",
+    "Specifically, by choosing the phase angles $\\{\\phi_0, \\phi_1, \\dots, \\phi_d\\}$ correctly, the resulting unitary $U_\\Phi$ becomes a new block encoding. In this new encoding, the matrix occupying the top-left block is no longer $A/\\alpha$, but rather a polynomial $P(A/\\alpha)$. In other words, applying QSP to a block encoding returns a new block encoding representing the polynomial of the underlying operator.\n",
     "\n",
     "Through a clever choice of the phase angles $\\{\\phi_0, \\phi_1, \\dots, \\phi_d\\}$, the block-encoding (top left block) of this unitary becomes a polynomial $P(x)$. When we \"lift\" this logic from a single qubit to a full quantum variable this 1-qubit rotation sequence effectively applies the polynomial $P$ to every eigenvalue of your Hamiltonian or matrix at once.\n",
     "\n",
