added some links to other parts of the docs

--- a/documentation/source/general/tutorial/BigInteger.ipynb
+++ b/documentation/source/general/tutorial/BigInteger.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Using `BigInteger` to compile Shor's algorithm at 2048 bit\n",
     "\n",
-    "In a previous tutorial, we learned how Jasp allows us to use Qrisp to compile quantum algorithms at utility-scale.\n",
+    "In the [Jasp tutorial](Jasp.ipynb), we learned how Jasp allows us to use Qrisp to compile quantum algorithms at utility-scale.\n",
     "However, Jasp has a caveat that may not be immediately apparent to those coming from Python: it uses fixed-size integers.\n",
     "On the other hand, Python's `int` supports arbitrary sizes.\n",
     "For example, let us create a large integer, parse it to Jasp, and return it to Python:"
@@ -246,9 +246,9 @@
    "source": [
     "## Finding the order of a `BigInteger`\n",
     "\n",
-    "As we learned in a previous tutorial, the problem of factoring can be reduced to order-finding.\n",
+    "As we learned in the [Shor tutorial](Shor.ipynb), the problem of factoring can be reduced to order-finding.\n",
     "Shor's algorithm does exactly that and provides an efficient quantum algorithm for order-finding.\n",
-    "Following the previous tutorials, we implement this"
+    "Following the [fault-tolerant compilation tutorial](FT_compilation.ipynb), we implement this"
    ]
   },
   {
@@ -292,14 +292,6 @@
    "id": "fb9dd8d6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\RaphaelSeidel\\miniforge3\\envs\\pulla\\Lib\\site-packages\\jax\\_src\\ops\\scatter.py:108: FutureWarning: scatter inputs have incompatible types: cannot safely cast value from dtype=int64 to dtype=uint32 with jax_numpy_dtype_promotion='standard'. In future JAX releases this will result in an error.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
